Added permission for OUnit entity overview; changed config install to match

--- a/config/install/views.view.ewp_ounit_admin.yml
+++ b/config/install/views.view.ewp_ounit_admin.yml
@@ -39,7 +39,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'administer organizational unit entities'
+          perm: 'access organizational unit entities overview'
       cache:
         type: tag
         options: {  }
