--- a/ewp_ounits.info.yml
+++ b/ewp_ounits.info.yml
@@ -2,6 +2,7 @@ name: 'EWP OUnits'
 type: module
 description: 'Drupal implementation of the EWP Organizational Units API'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'EWP'
 dependencies:
   - ewp_core:ewp_core
