--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,10 @@
     }
   ],
   "require": {
-    "euf/ewp_core": "^1.0@alpha",
-    "euf/ewp_flexible_address": "^1.0@alpha",
-    "euf/ewp_phone_number": "^1.0@alpha",
-    "euf/ewp_contact": "^1.0@alpha",
-    "euf/ewp_institutions": "^1.0@alpha"
+    "euf/ewp_core": "^1.0@beta",
+    "euf/ewp_flexible_address": "^1.0@beta",
+    "euf/ewp_phone_number": "^1.0@beta",
+    "euf/ewp_contact": "^1.0@beta",
+    "euf/ewp_institutions": "^1.0@beta"
   }
 }
