--- a/config/install/field.field.ounit.ounit.ounit_id.yml
+++ b/config/install/field.field.ounit.ounit.ounit_id.yml
@@ -6,6 +6,9 @@ dependencies:
   module:
     - ewp_core
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit.ounit_id
 field_name: ounit_id
 entity_type: ounit
