--- a/config/install/field.storage.ounit.abbreviation.yml
+++ b/config/install/field.storage.ounit.abbreviation.yml
@@ -3,6 +3,9 @@ status: true
 dependencies:
   module:
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.abbreviation
 field_name: abbreviation
 entity_type: ounit
