--- a/config/install/field.storage.ounit.name.yml
+++ b/config/install/field.storage.ounit.name.yml
@@ -4,6 +4,9 @@ dependencies:
   module:
     - ewp_core
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.name
 field_name: name
 entity_type: ounit
