--- a/config/install/field.storage.ounit.parent_ounit.yml
+++ b/config/install/field.storage.ounit.parent_ounit.yml
@@ -3,6 +3,9 @@ status: true
 dependencies:
   module:
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.parent_ounit
 field_name: parent_ounit
 entity_type: ounit
