--- a/config/install/views.view.ewp_ounit_admin.yml
+++ b/config/install/views.view.ewp_ounit_admin.yml
@@ -22,6 +22,9 @@ dependencies:
     - ewp_institutions
     - ewp_ounits
     - user
+  enforced:
+    module:
+      - ewp_ounits
 id: ewp_ounit_admin
 label: 'EWP OUnit administration'
 module: views
