--- a/config/install/field.field.ounit.ounit.logo_url.yml
+++ b/config/install/field.field.ounit.ounit.logo_url.yml
@@ -6,6 +6,9 @@ dependencies:
   module:
     - ewp_core
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit.logo_url
 field_name: logo_url
 entity_type: ounit
