--- a/config/install/field.field.ounit.ounit.ounit_code.yml
+++ b/config/install/field.field.ounit.ounit.ounit_code.yml
@@ -5,6 +5,9 @@ dependencies:
     - field.storage.ounit.ounit_code
   module:
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit.ounit_code
 field_name: ounit_code
 entity_type: ounit
