--- a/config/install/field.field.ounit.ounit.parent_hei.yml
+++ b/config/install/field.field.ounit.ounit.parent_hei.yml
@@ -5,6 +5,9 @@ dependencies:
     - field.storage.ounit.parent_hei
   module:
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit.parent_hei
 field_name: parent_hei
 entity_type: ounit
