--- a/config/install/field.field.ounit.ounit.website_url.yml
+++ b/config/install/field.field.ounit.ounit.website_url.yml
@@ -6,6 +6,9 @@ dependencies:
   module:
     - ewp_core
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit.website_url
 field_name: website_url
 entity_type: ounit
