--- a/config/install/field.storage.ounit.mailing_address.yml
+++ b/config/install/field.storage.ounit.mailing_address.yml
@@ -4,6 +4,9 @@ dependencies:
   module:
     - ewp_flexible_address
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.mailing_address
 field_name: mailing_address
 entity_type: ounit
