--- a/config/install/field.storage.ounit.ounit_code.yml
+++ b/config/install/field.storage.ounit.ounit_code.yml
@@ -3,6 +3,9 @@ status: true
 dependencies:
   module:
     - ewp_ounits
+  enforced:
+    module:
+      - ewp_ounits
 id: ounit.ounit_code
 field_name: ounit_code
 entity_type: ounit
