--- a/ewp_ounits.links.menu.yml
+++ b/ewp_ounits.links.menu.yml
@@ -24,21 +24,21 @@ ounit.fields:
   title: 'Manage fields'
   description: 'Manage the fields of Organizational Unit entities'
   route_name: entity.ounit.field_ui_fields
-  parent: ewp_ounits.admin
+  parent: ounit.settings
   weight: 2
 
 ounit.form:
   title: 'Manage form display'
   description: 'Manage the form display of Organizational Unit entities'
   route_name: entity.entity_form_display.ounit.default
-  parent: ewp_ounits.admin
+  parent: ounit.settings
   weight: 3
 
 ounit.display:
   title: 'Manage display'
   description: 'Manage the display of Organizational Unit entities'
   route_name: entity.entity_view_display.ounit.default
-  parent: ewp_ounits.admin
+  parent: ounit.settings
   weight: 4
 
 ounit.collection:
