--- a/config/install/field.storage.ounit.ounit_id.yml
+++ b/config/install/field.storage.ounit.ounit_id.yml
@@ -12,7 +12,7 @@ field_name: ounit_id
 entity_type: ounit
 type: ascii_identifier
 settings:
-  max_length: '64'
+  max_length: 64
   is_ascii: true
   case_sensitive: true
 module: ewp_core
