Adds a preview form and default operation; adds task links

--- a/modules/ewp_ounits_get/ewp_ounits_get.routing.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.routing.yml
@@ -30,6 +30,14 @@ entity.ounit_provider.edit_form:
   requirements:
     _permission: 'administer ounit provider entities'
 
+entity.ounit_provider.preview_form:
+  path: '/admin/ewp/ounit/get/{ounit_provider}/preview'
+  defaults:
+    _entity_form: 'ounit_provider.preview'
+    _title: 'Preview Organizational Unit provider'
+  requirements:
+    _permission: 'administer ounit provider entities'
+
 entity.ounit_provider.delete_form:
   path: '/admin/ewp/ounit/get/{ounit_provider}/delete'
   defaults:
