--- a/modules/ewp_ounits_get/ewp_ounits_get.info.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Provides an Organizational Unit provider configuration entity.'
 core_version_requirement: ^8 || ^9 || ^10
 package: 'EWP'
+configure: entity.ounit_provider.collection
 dependencies:
   - ewp_institutions:ewp_institutions
   - ewp_ounits:ewp_ounits
