--- a/modules/ewp_ounits_get/ewp_ounits_get.services.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.services.yml
@@ -1,4 +1,7 @@
 services:
+  ewp_ounits_get.fetch:
+    class: Drupal\ewp_ounits_get\JsonDataFetcher
+    arguments: ['@http_client', '@logger.factory', '@tempstore.shared', '@string_translation']
   ewp_ounits_get.json:
     class: Drupal\ewp_ounits_get\JsonDataProcessor
     arguments: []
