--- a/modules/ewp_ounits_get/ewp_ounits_get.links.menu.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.links.menu.yml
@@ -1,10 +1,17 @@
-# EWP OUnits GET menu parent.
+# EWP OUnits GET menu.
 ewp_ounits_get.admin:
   title: 'GET settings'
   route_name: ewp_ounits_get.admin
   description: 'Settings for EWP OUnits GET.'
   parent: ewp_ounits.admin
   weight: 5
+
+ewp_ounits_get.field_mapping:
+  title: Field mapping
+  description: Map API data to entity fields
+  route_name: ewp_ounits_get.field_mapping
+  parent: ewp_ounits_get.admin
+  weight: 2
 
 # Organizational Unit providers.
 entity.ounit_provider.overview:
