--- a/modules/ewp_ounits_get/ewp_ounits_get.services.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.services.yml
@@ -1,10 +1,13 @@
 services:
+  ewp_ounits_get.entity:
+    class: Drupal\ewp_ounits_get\OunitEntityManager
+    arguments: ['@entity_type.manager', '@ewp_ounits_get.fields']
   ewp_ounits_get.fetch:
     class: Drupal\ewp_ounits_get\JsonDataFetcher
     arguments: ['@http_client', '@logger.factory', '@tempstore.shared', '@string_translation']
   ewp_ounits_get.fields:
     class: Drupal\ewp_ounits_get\OunitFieldManager
-    arguments: ['@entity_field.manager', '@ewp_ounits_get.schema.ounit.occapi']
+    arguments: ['@config.factory', '@entity_field.manager', '@ewp_ounits_get.schema.ounit.occapi']
   ewp_ounits_get.json:
     class: Drupal\ewp_ounits_get\JsonDataProcessor
     arguments: []
