--- a/modules/ewp_ounits_get/ewp_ounits_get.links.task.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.links.task.yml
@@ -4,11 +4,17 @@ entity.ounit_provider.preview_form:
   title: 'Preview'
   weight: 0
 
+entity.ounit_provider.import_form:
+  route_name: entity.ounit_provider.import_form
+  base_route: entity.ounit_provider.edit_form
+  title: 'Import data'
+  weight: 1
+
 entity.ounit_provider.edit_form:
   route_name: entity.ounit_provider.edit_form
   base_route: entity.ounit_provider.edit_form
   title: 'Edit'
-  weight: 1
+  weight: 2
 
 entity.ounit_provider.delete_form:
   route_name:  entity.ounit_provider.delete_form
