--- a/modules/ewp_ounits_get/ewp_ounits_get.routing.yml
+++ b/modules/ewp_ounits_get/ewp_ounits_get.routing.yml
@@ -1,3 +1,4 @@
+# Administration.
 ewp_ounits_get.admin:
   path: '/admin/ewp/ounit/get'
   defaults:
@@ -6,6 +7,15 @@ ewp_ounits_get.admin:
   requirements:
     _permission: 'administer ounit provider entities'
 
+ewp_ounits_get.field_mapping:
+  path: '/admin/ewp/ounit/get/fieldmap'
+  defaults:
+    _title: 'Field mapping'
+    _form: 'Drupal\ewp_ounits_get\Form\FieldMappingForm'
+  requirements:
+    _permission: 'administer ounit provider entities'
+
+# Organizational Unit providers.
 entity.ounit_provider.collection:
   path: '/admin/ewp/ounit/get/list'
   defaults:
@@ -38,14 +48,6 @@ entity.ounit_provider.preview_form:
   requirements:
     _permission: 'administer ounit provider entities'
 
-entity.ounit_provider.import_form:
-  path: '/admin/ewp/ounit/get/{ounit_provider}/import'
-  defaults:
-    _entity_form: 'ounit_provider.import'
-    _title_callback: '\Drupal\ewp_ounits_get\Controller\OunitProviderController::importFormTitle'
-  requirements:
-    _entity_create_access: ounit
-
 entity.ounit_provider.delete_form:
   path: '/admin/ewp/ounit/get/{ounit_provider}/delete'
   defaults:
@@ -54,35 +56,36 @@ entity.ounit_provider.delete_form:
   requirements:
     _permission: 'administer ounit provider entities'
 
-ewp_ounits_get.field_mapping:
-  path: '/admin/ewp/ounit/get/fieldmap'
+entity.ounit_provider.import_form:
+  path: '/ewp/ounit/import/{ounit_provider}'
   defaults:
-    _title: 'Field mapping'
-    _form: 'Drupal\ewp_ounits_get\Form\FieldMappingForm'
+    _entity_form: 'ounit_provider.import'
+    _title_callback: '\Drupal\ewp_ounits_get\Controller\OunitProviderController::importFormTitle'
   requirements:
-    _permission: 'administer ounit provider entities'
+    _entity_create_access: ounit
 
+# Organizational Unit import routes.
 entity.ounit.import:
-  path: '/admin/ewp/ounit/import'
+  path: '/ewp/ounit/import'
   defaults:
-    _title_callback: '\Drupal\ewp_ounits_get\Controller\OunitProviderController::providerListTitle'
-    _controller: '\Drupal\ewp_ounits_get\Controller\OunitProviderController::providerList'
+    _title: 'Available Organizational Unit providers'
+    _controller: '\Drupal\ewp_ounits_get\Controller\OunitProviderListController::providerList'
   requirements:
     _entity_create_access: ounit
   options:
     _admin_route: true
 
-entity.ounit.import.ounit_id:
-  path: '/admin/ewp/ounit/import/{ounit_provider}/{ounit_id}'
-  defaults:
-    _title: 'Import Organizational Units'
-    _controller: '\Drupal\ewp_ounits_get\Controller\OunitImportController::ounitImport'
-  requirements:
-    _entity_create_access: ounit
-  options:
-    _admin_route: true
-    parameters:
-      ounit_provider:
-        type: entity:ounit_provider
-      ounit_id:
-        type: ounit_id
+# entity.ounit.import.ounit_id:
+#   path: '/admin/ewp/ounit/import/{ounit_provider}/{ounit_id}'
+#   defaults:
+#     _title: 'Import Organizational Units'
+#     _controller: '\Drupal\ewp_ounits_get\Controller\OunitImportController::ounitImport'
+#   requirements:
+#     _entity_create_access: ounit
+#   options:
+#     _admin_route: true
+#     parameters:
+#       ounit_provider:
+#         type: entity:ounit_provider
+#       ounit_id:
+#         type: ounit_id
