--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,37 @@
 {
-  "name": "euf/ewp_ounits",
-  "type": "drupal-module",
-  "description": "Drupal implementation of the EWP Organizational Units API",
-  "keywords": [
-  ],
-  "homepage": "",
-  "minimum-stability": "dev",
-  "support": {
-    "issues": "",
-    "source": ""
-  },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/EuropeanUniversityFoundation/ewp_core"
+    "name": "euf/ewp_ounits",
+    "type": "drupal-module",
+    "description": "Implements EWP Organizational Units as a content entity type.",
+    "keywords": [
+        "Drupal",
+        "Erasmus Without Paper",
+        "Entity type"
+    ],
+    "homepage": "https://github.com/EuropeanUniversityFoundation/ewp_ounits",
+    "support": {
+        "issues": "https://github.com/EuropeanUniversityFoundation/ewp_ounits/issues",
+        "source": "https://github.com/EuropeanUniversityFoundation/ewp_ounits"
     },
-    {
-      "type": "vcs",
-      "url": "https://github.com/EuropeanUniversityFoundation/ewp_flexible_address"
+    "license": "GPL-2.0-or-later",
+    "authors": [
+        {
+            "name": "Tiago Simões",
+            "email": "tiago.simoes@uni-foundation.eu",
+            "role": "Maintainer"
+        }
+    ],
+    "require": {
+        "euf/ewp_contact": "^1.0@beta",
+        "euf/ewp_core": "^1.0@beta",
+        "euf/ewp_flexible_address": "^1.0@beta",
+        "euf/ewp_institutions": "^1.0@beta",
+        "euf/ewp_phone_number": "^1.0@beta"
     },
-    {
-      "type": "vcs",
-      "url": "https://github.com/EuropeanUniversityFoundation/ewp_phone_number"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/EuropeanUniversityFoundation/ewp_contact"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/EuropeanUniversityFoundation/ewp_institutions"
-    }
-  ],
-  "require": {
-    "euf/ewp_core": "^1.0@beta",
-    "euf/ewp_flexible_address": "^1.0@beta",
-    "euf/ewp_phone_number": "^1.0@beta",
-    "euf/ewp_contact": "^1.0@beta",
-    "euf/ewp_institutions": "^1.0@beta"
-  }
+    "minimum-stability": "dev",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.uni-foundation.eu"
+        }
+    ]
 }
