--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         }
     ],
     "require": {
+        "drupal/entity_reference_validators": "^2.0",
         "euf/ewp_contact": "^1.0",
         "euf/ewp_core": "^1.0",
         "euf/ewp_institutions": "^1.0"
@@ -30,6 +31,10 @@
         {
             "type": "composer",
             "url": "https://packages.uni-foundation.eu"
+        },
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
         }
     ]
 }
